# boatlighting

./: .gitignore  README.md
Python/: LightClass.py  main-old.py  main.py
old/: README.md
rewrite/: main.cpp  ws2812-rpi.cpp  ws2812-rpi.h
src/: CMakeLists.txt  Logger.cpp  Logger.hpp  SecretLogger.cpp  SecretLogger.hpp  main.cpp
